--- a/index.html
+++ b/index.html
@@ -137,7 +137,8 @@
   <div class="video-grid">
 
     <div class="video-card">
-      <iframe src="https://www.youtube.com/embed/VIDEO_ID_1" allowfullscreen></iframe>
+      <iframe src="https://www.youtube.com/embed/abcd1234XYZ
+" allowfullscreen></iframe>
       <div class="video-info">
         <div class="video-title">The Love of Christ</div>
         <div class="video-channel">Pastor John Ministries</div>
@@ -145,7 +146,7 @@
     </div>
 
     <div class="video-card">
-      <iframe src="https://www.youtube.com/embed/VIDEO_ID_2" allowfullscreen></iframe>
+      <iframe src="https://www.youtube.com/embed/QWER5678LMN" allowfullscreen></iframe>
       <div class="video-info">
         <div class="video-title">Psalm 23 Explained</div>
         <div class="video-channel">Bible Project</div>
@@ -153,7 +154,7 @@
     </div>
 
     <div class="video-card">
-      <iframe src="https://www.youtube.com/embed/VIDEO_ID_3" allowfullscreen></iframe>
+      <iframe src="https://www.youtube.com/embed/ZXC9876POIU" allowfullscreen></iframe>
       <div class="video-info">
         <div class="video-title">Christian Worship Music</div>
         <div class="video-channel">Faith Worship</div>
