--- a/index.html
+++ b/index.html
@@ -1,171 +1,230 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>LTW TV | Light of the World</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>LTW TV | Light of the World</title>
 
-  <style>
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      background-color: #f9f9f9;
-      color: #111;
-    }
+<style>
+body {
+  margin: 0;
+  font-family: Arial, sans-serif;
+  background: #f9f9f9;
+}
 
-    header {
-      background: #ffffff;
-      padding: 15px 25px;
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      border-bottom: 1px solid #ddd;
-    }
+/* HEADER */
+header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 12px 20px;
+  background: white;
+  border-bottom: 1px solid #ddd;
+}
 
-    header h1 {
-      color: #b91c1c;
-      font-size: 24px;
-      margin: 0;
-    }
+header h1 {
+  color: #b91c1c;
+  margin: 0;
+}
 
-    nav a {
-      margin-left: 15px;
-      text-decoration: none;
-      color: #333;
-      font-weight: bold;
-    }
+.search-box input {
+  padding: 8px;
+  width: 260px;
+}
 
-    nav a:hover {
-      color: #b91c1c;
-    }
+/* LAYOUT */
+.container {
+  display: flex;
+}
 
-    .categories {
-      display: flex;
-      gap: 10px;
-      padding: 15px;
-      overflow-x: auto;
-      background: #ffffff;
-      border-bottom: 1px solid #ddd;
-    }
+/* SIDEBAR */
+.sidebar {
+  width: 200px;
+  background: white;
+  border-right: 1px solid #ddd;
+  height: calc(100vh - 60px);
+  padding: 15px;
+}
 
-    .category {
-      padding: 8px 16px;
-      border-radius: 20px;
-      background: #eeeeee;
-      cursor: pointer;
-      font-size: 14px;
-      white-space: nowrap;
-    }
+.sidebar div {
+  margin-bottom: 15px;
+  cursor: pointer;
+  font-weight: bold;
+}
 
-    .category:hover {
-      background: #b91c1c;
-      color: white;
-    }
+/* MAIN */
+.main {
+  flex: 1;
+  padding: 20px;
+}
 
-    .video-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(260px, 1fr));
-      gap: 20px;
-      padding: 25px;
-    }
+/* CATEGORIES */
+.categories {
+  display: flex;
+  gap: 10px;
+  margin-bottom: 15px;
+}
 
-    .video-card {
-      background: #ffffff;
-      border-radius: 10px;
-      overflow: hidden;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-      transition: transform 0.2s;
-    }
+.category {
+  padding: 6px 14px;
+  border-radius: 20px;
+  background: #eee;
+  cursor: pointer;
+}
 
-    .video-card:hover {
-      transform: translateY(-4px);
-    }
+.category.active {
+  background: #b91c1c;
+  color: white;
+}
 
-    .video-card iframe {
-      width: 100%;
-      height: 160px;
-      border: none;
-    }
+/* VIDEOS */
+.video-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(260px, 1fr));
+  gap: 20px;
+}
 
-    .video-info {
-      padding: 12px;
-    }
+.video-card {
+  background: white;
+  border-radius: 8px;
+  box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+  overflow: hidden;
+}
 
-    .video-title {
-      font-weight: bold;
-      margin-bottom: 6px;
-    }
+.video-card iframe {
+  width: 100%;
+  height: 160px;
+}
 
-    .video-channel {
-      font-size: 14px;
-      color: #555;
-    }
+.video-info {
+  padding: 10px;
+}
 
-    footer {
-      text-align: center;
-      padding: 20px;
-      font-size: 14px;
-      color: #666;
-      background: #ffffff;
-      border-top: 1px solid #ddd;
-    }
-  </style>
+.actions button {
+  margin-right: 6px;
+  cursor: pointer;
+}
+
+/* COMMENTS */
+.comments {
+  margin-top: 8px;
+}
+
+.comments input {
+  width: 100%;
+  padding: 5px;
+  margin-top: 4px;
+}
+</style>
 </head>
+
 <body>
 
-  <header>
-    <h1>✝ LTW TV</h1>
-    <nav>
-      <a href="#">Home</a>
-      <a href="#">Sermons</a>
-      <a href="#">Worship</a>
-      <a href="#">Bible Study</a>
-      <a href="#">Kids</a>
-      <a href="#">About</a>
-    </nav>
-  </header>
+<header>
+  <h1>✝ LTW TV</h1>
+  <div class="search-box">
+    <input type="text" id="search" placeholder="Search Christian videos..." onkeyup="searchVideos()">
+  </div>
+</header>
 
-  <div class="categories">
-    <div class="category">All</div>
-    <div class="category">Sermons</div>
-    <div class="category">Worship</div>
-    <div class="category">Bible Study</div>
-    <div class="category">Youth</div>
-    <div class="category">Kids</div>
+<div class="container">
+
+  <!-- SIDEBAR -->
+  <div class="sidebar">
+    <div>🏠 Home</div>
+    <div>🔥 Trending</div>
+    <div>📺 Subscriptions</div>
+    <div>🎵 Worship</div>
+    <div>📖 Sermons</div>
+    <div>🧒 Kids</div>
   </div>
 
-  <div class="video-grid">
+  <!-- MAIN CONTENT -->
+  <div class="main">
 
-    <div class="video-card">
-      <iframe src="https://www.youtube.com/embed/abcd1234XYZ
-" allowfullscreen></iframe>
-      <div class="video-info">
-        <div class="video-title">The Love of Christ</div>
-        <div class="video-channel">Pastor John Ministries</div>
-      </div>
+    <!-- CATEGORIES -->
+    <div class="categories">
+      <div class="category active" onclick="filterCategory('All')">All</div>
+      <div class="category" onclick="filterCategory('Sermon')">Sermons</div>
+      <div class="category" onclick="filterCategory('Worship')">Worship</div>
+      <div class="category" onclick="filterCategory('Bible')">Bible Study</div>
     </div>
 
-    <div class="video-card">
-      <iframe src="https://www.youtube.com/embed/QWER5678LMN" allowfullscreen></iframe>
-      <div class="video-info">
-        <div class="video-title">Psalm 23 Explained</div>
-        <div class="video-channel">Bible Project</div>
-      </div>
-    </div>
+    <!-- VIDEOS -->
+    <div class="video-grid" id="videos">
 
-    <div class="video-card">
-      <iframe src="https://www.youtube.com/embed/ZXC9876POIU" allowfullscreen></iframe>
-      <div class="video-info">
-        <div class="video-title">Christian Worship Music</div>
-        <div class="video-channel">Faith Worship</div>
+      <div class="video-card" data-title="Love of Christ" data-category="Sermon">
+        <iframe src="https://www.youtube.com/embed/abcd1234XYZ" allowfullscreen></iframe>
+        <div class="video-info">
+          <strong>Love of Christ</strong><br>
+          <small>Pastor John</small><br>
+          <button onclick="subscribe(this)">Subscribe</button>
+          <div class="actions">
+            <button onclick="like(this)">👍 <span>0</span></button>
+            <button onclick="dislike(this)">👎 <span>0</span></button>
+          </div>
+          <div class="comments">
+            <input placeholder="Add a comment..." onkeypress="addComment(event)">
+          </div>
+        </div>
       </div>
-    </div>
 
+      <div class="video-card" data-title="Psalm 23" data-category="Bible">
+        <iframe src="https://www.youtube.com/embed/QWER5678LMN" allowfullscreen></iframe>
+        <div class="video-info">
+          <strong>Psalm 23 Explained</strong><br>
+          <small>Bible Project</small><br>
+          <button onclick="subscribe(this)">Subscribe</button>
+          <div class="actions">
+            <button onclick="like(this)">👍 <span>0</span></button>
+            <button onclick="dislike(this)">👎 <span>0</span></button>
+          </div>
+          <div class="comments">
+            <input placeholder="Add a comment..." onkeypress="addComment(event)">
+          </div>
+        </div>
+      </div>
+
+    </div>
   </div>
+</div>
 
-  <footer>
-    “You are the light of the world.” — Matthew 5:14
-  </footer>
+<script>
+function like(btn) {
+  btn.querySelector("span").innerText++;
+}
+
+function dislike(btn) {
+  btn.querySelector("span").innerText++;
+}
+
+function subscribe(btn) {
+  btn.innerText = "Subscribed ✔";
+}
+
+function addComment(e) {
+  if (e.key === "Enter") {
+    alert("Comment added (demo mode)");
+    e.target.value = "";
+  }
+}
+
+function searchVideos() {
+  let q = document.getElementById("search").value.toLowerCase();
+  document.querySelectorAll(".video-card").forEach(v => {
+    v.style.display = v.dataset.title.toLowerCase().includes(q) ? "block" : "none";
+  });
+}
+
+function filterCategory(cat) {
+  document.querySelectorAll(".category").forEach(c => c.classList.remove("active"));
+  event.target.classList.add("active");
+
+  document.querySelectorAll(".video-card").forEach(v => {
+    v.style.display = (cat === "All" || v.dataset.category === cat) ? "block" : "none";
+  });
+}
+</script>
 
 </body>
 </html>
